<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Popular Movies</string>
    <string name="action_list_type">Change list</string>
    <string name="title_activity_detail">Movie details</string>
    <string name="most_popular">Most Popular Movies</string>
    <string name="top_rated">Top Rated Movies</string>
    <string name="movie_title_placeholder" translatable="false">Terminator II</string>
    <string name="release_date_placeholder">29 August 1997</string>
    <string name="synopsis_placeholder" translatable="false">synopsis.\n\n</string>
    <string name="popular_movies">Popular movies</string>
    <string name="movie_poster">Movie poster</string>
    <string name="internet_needed_for_app">Sorry, you NEED Internet for this app</string>
    <string name="themoviedb_base_api" translatable="false">/movie/</string>
    <string name="malformed_json_object">Malformed JSON Object (item #{0})</string>
    <string name="no_internet_no_details">No Internet, no movie details. Sorry!</string>
    <string name="preparingMoviesList">Preparing movies list…</string>
    <string name="top_rated_movies">Show Top Rated first</string>
    <string name="most_popular_movies">Show Most Popular first</string>
    <string name="json_attr_release_date" translatable="false">release_date</string>
    <string name="json_attr_overview" translatable="false">overview</string>
    <string name="json_attr_title" translatable="false">title</string>
    <string name="json_attr_vote_average" translatable="false">vote_average</string>
    <string name="json_attr_poster_path" translatable="false">poster_path</string>
    <string name="json_attr_results" translatable="false">results</string>
    <string name="extraMovieContentKey" translatable="false">android.intent.extra.MOVIE</string>
    <string name="extra_movie_id" translatable="false">android.intent.extra.ID</string>
    <string name="poster_url_prefix" translatable="false">http://image.tmdb.org/t/p/w</string>
    <string name="tmdb_page_param" translatable="false">page</string>
    <string name="url_part_most_popular" translatable="false">popular</string>
    <string name="url_part_top_rated" translatable="false">top_rated</string>
    <string name="json_attr_total_results" translatable="false">total_results</string>
    <string name="themoviedb_api_url_prefix" translatable="false">https://api.themoviedb.org/3</string>
    <string name="tmdb_param_api_key" translatable="false">api_key</string>
    <string name="courtesy_tmdb">Credits: movie data from The Movie DB</string>
    <string name="themoviedb">TheMovieDB</string>
    <string name="favorite_movies">Show Favorite</string>
    <string name="error_no_video_player">Cannot find video player app.</string>
    <string name="share_movie_text">Looking at <xliff:g example="Forrest Gump" id="movie">%s</xliff:g> movie. Any thoughts?</string>
    <string name="share_movie_text_with_trailer">Looking at <xliff:g example="Forrest Gump" id="movie">%s</xliff:g> movie (<xliff:g example="https://www.youtube.com/watch?v=Oc_JXiRanlI" id="trailer">%s</xliff:g>). Any  thoughts?</string>
    <string name="share_menu">Share</string>
    <string name="favorite">favorite</string>
    <string name="removeFromFavorite">Removed from favorites</string>
    <string name="addToFavorite">Added to favorites</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="callChokingTMDB">TheMovieDB calls are being choked, please wait…</string>
    <string name="undoActionName">UNDO</string>
    <string name="couldInitialize">Couldn\'t initialize list</string>
    <string name="networkIssues">Network issues, retrying…</string>
    <string name="networkStuck">Network stuck, could not load</string>
    <string name="exampleTrailerType">Featurette</string>
    <string name="exampleTrailerName">Schwartzie and his robotic eye</string>
    <string name="exampleReviewerName">SkyNet74</string>
    <string name="exampleReviewText">Not bad, though I craved for even more action</string>
    <string name="moviePosterBackgroundDescription">Movie poster background</string>
    <string name="trailer_thumbnail">Trailer thumbnail</string>

</resources>
