<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.log2.popmovies.MainActivity">
    <item
        android:id="@+id/menu_tmdb_credit"
        android:icon="@drawable/tmdb_logo_stacked_green"
        android:orderInCategory="100"
        android:title="@string/themoviedb"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_action_change_list_black"
        android:orderInCategory="101"
        android:title="@string/action_list_type"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menuTopRated"
                android:title="@string/top_rated_movies" />
            <item
                android:id="@+id/menuMostPopular"
                android:title="@string/most_popular_movies" />
        </menu>
    </item>
</menu>
