<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_trailer_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/trailerThumbnailSize"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/trailer_thumbnail">
    </ImageView>

    <TextView
        android:id="@+id/trailer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/objNameTextSize"
        tools:text="@string/exampleTrailerName" />

    <TextView
        android:id="@+id/trailer_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/objKindTextSize"
        tools:text="@string/exampleTrailerType" />

</LinearLayout>
